--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,8 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.datasource.url=jdbc:h2:file:C:./demo
+spring.datasource.url=jdbc:h2:file:~/demo
 spring.h2.console.enabled=true
+
+# JPA
+spring.jpa.hibernate.ddl-auto=update
