--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,9 @@ spring.h2.console.enabled=true
 # JPA
 spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=DEBUG
+spring.messages.basename=i18n/messages
+spring.messages.encoding=UTF-8
+server.tomcat.uri-encoding=UTF-8
+server.servlet.encoding.charset=UTF-8
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.encoding=UTF-8
